<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/sun_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:text="@string/xs_sunday_name" />

    <Space
        android:layout_width="8dp"
        android:layout_height="wrap_content"
        android:layout_weight="0" />

    <Button
        android:id="@+id/mon_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:text="@string/xs_monday_name" />

    <Space
        android:layout_width="8dp"
        android:layout_height="wrap_content"
        android:layout_weight="0" />

    <Button
        android:id="@+id/tue_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:text="@string/xs_tuesday_name" />

    <Space
        android:layout_width="8dp"
        android:layout_height="wrap_content"
        android:layout_weight="0" />

    <Button
        android:id="@+id/wed_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:text="@string/xs_wednesday_name" />

    <Space
        android:layout_width="8dp"
        android:layout_height="wrap_content"
        android:layout_weight="0" />

    <Button
        android:id="@+id/thu_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:text="@string/xs_thursday_name" />

    <Space
        android:layout_width="8dp"
        android:layout_height="wrap_content"
        android:layout_weight="0" />

    <Button
        android:id="@+id/fri_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:text="@string/xs_friday_name" />

    <Space
        android:layout_width="8dp"
        android:layout_height="wrap_content"
        android:layout_weight="0" />

    <Button
        android:id="@+id/sat_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:text="@string/xs_saturday_name" />
</LinearLayout>
